fix(searchBar): change z-index

--- a/src/components/lists/searchList/searchList.css
+++ b/src/components/lists/searchList/searchList.css
@@ -36,7 +36,7 @@
     display: flex;
     flex-wrap: wrap;
     position: sticky;
-    z-index: 10;
+    z-index: 1;
     height: 10vh;
     border: 5px solid #0E0016;
     padding: 0;
